Images are moved in file and retouched HTML for it

--- a/bricktower.html
+++ b/bricktower.html
@@ -91,7 +91,7 @@
       <div class="container ">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div>
-            <img src="image1.jpg" />
+            <img src="images/image1.jpg" />
           </div>
           <div>
             <b class="bricktower">BRICKTOWER</b>
@@ -239,7 +239,7 @@
               <h1>OUR SERVICES</h1>
               <p>HOME /<label class="text-warning pl-1"> SERVICES</label></p>
             </div>
-            <img src="ourservices.png" class="img-fluid" />
+            <img src="images/ourservices.png" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="arch.jpg" class=" mb-4" />
+                  <img src="images/arch.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -299,7 +299,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="manager.jpg" class=" mb-4" />
+                  <img src="images/manager.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -322,7 +322,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="building.jpg" class=" mb-4" />
+                  <img src="images/building.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -351,7 +351,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="wall.jpg" class=" mb-4" />
+                  <img src="images/wall.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -374,7 +374,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="hardwood.jpg" class=" mb-4" />
+                  <img src="images/hardwood.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -397,7 +397,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="pool.jpg" class=" mb-4" />
+                  <img src="images/pool.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -426,7 +426,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="refur.jpg" class=" mb-4" />
+                  <img src="images/refur.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -449,7 +449,7 @@
                       sit amet erat quis nisi suscipit the iaculis.
                     </p>
                   </div>
-                  <img src="electrical.jpg" class=" mb-4" />
+                  <img src="images/electrical.jpg" class=" mb-4" />
                 </div>
                 <div class=" mb-3">
                   <button
@@ -491,7 +491,7 @@
           <div class="col-md-3 col-6 p-4">
             <div class="row">
               <div class="col-3 p-0">
-                <img src="icon-people.png" class=" img-fluid" />
+                <img src="images/icon-people.png" class=" img-fluid" />
               </div>
               <div class="col-9">
                 <h4 class="text-warning"><b>10+</b></h4>
@@ -502,7 +502,7 @@
           <div class="col-md-3 col-6 p-4">
             <div class="row">
               <div class="col-3 p-0">
-                <img src="icon-door.png" class=" img-fluid" />
+                <img src="images/icon-door.png" class=" img-fluid" />
               </div>
               <div class="col-9">
                 <h4 class="text-warning"><b>600+</b></h4>
@@ -513,7 +513,7 @@
           <div class="col-md-3 col-6 p-4">
             <div class="row">
               <div class="col-3 p-0">
-                <img src="icon-cup.png" class=" img-fluid" />
+                <img src="images/icon-cup.png" class=" img-fluid" />
               </div>
               <div class="col-9">
                 <h4 class="text-warning"><b>15+</b></h4>
@@ -525,7 +525,7 @@
           <div class="col-md-3 col-6 p-4">
             <div class="row">
               <div class="col-3 p-0">
-                <img src="icon-heart.png" class=" img-fluid" />
+                <img src="images/icon-heart.png" class=" img-fluid" />
               </div>
               <div class="col-9">
                 <h4 class="text-warning"><b>2000+</b></h4>
@@ -554,7 +554,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="arch.jpg" />
+              <img src="images/arch.jpg" />
             </div>
             <p class="headersize">ARCHITECTURE</p>
             <p class="small-text">
@@ -577,7 +577,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="building.jpg" />
+              <img src="images/building.jpg" />
             </div>
             <p class="headersize">BUILDING MAINTENANCE</p>
             <p class="small-text  ">
@@ -600,7 +600,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="manager.jpg" />
+              <img src="images/manager.jpg" />
             </div>
             <p class="headersize">CONSTRUCTION MANAGER</p>
             <p class="small-text">
@@ -624,7 +624,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="wall.jpg" />
+              <img src="images/wall.jpg" />
             </div>
             <p class="headersize">WALL PAINT</p>
             <p class="small-text">
@@ -652,7 +652,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="hardwood.jpg" />
+              <img src="images/hardwood.jpg" />
             </div>
             <p class="headersize">HARDWOOD FLOORING</p>
             <p class="small-text">
@@ -676,7 +676,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="pool.jpg" />
+              <img src="images/pool.jpg" />
             </div>
 
             <p class="headersize">POOL CLEANING</p>
@@ -701,7 +701,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="refur.jpg" />
+              <img src="images/refur.jpg" />
             </div>
             <p class="headersize">REFURBISHMENT</p>
             <p class="small-text">
@@ -725,7 +725,7 @@
               <div class="position-absolute plus">
                 <i class="fas fa-plus"></i>
               </div>
-              <img src="electrical.jpg" />
+              <img src="images/electrical.jpg" />
             </div>
             <p class="headersize">ELECTRICAL</p>
             <p class="small-text">
@@ -751,16 +751,16 @@
       <div class="container ">
         <div class="row ">
           <div class="col-6 col-md-3 p-5">
-            <img src="logo1.png" />
+            <img src="images/logo1.png" />
           </div>
           <div class="col-6 col-md-3 p-5">
-            <img src="logo2.png" />
+            <img src="images/logo2.png" />
           </div>
           <div class="col-6 col-md-3 p-5">
-            <img src="logo3.png" />
+            <img src="images/logo3.png" />
           </div>
           <div class="col-6 col-md-3 p-5">
-            <img src="logo4.png" />
+            <img src="images/logo4.png" />
           </div>
         </div>
       </div>
@@ -774,7 +774,7 @@
           <div class="col-12 col-sm-12 col-md-6 col-xl-3">
             <div class="row">
               <div class="col-3  p-0  ">
-                <img src="image1.jpg" />
+                <img src="images/image1.jpg" />
               </div>
               <div class="col-9 p-0">
                 <b class="bricktower">BRICKTOWER</b>
