--- a/BrickTower Theme/bricktower.html
+++ b/BrickTower Theme/bricktower.html
@@ -33,26 +33,9 @@
     />
     <link rel="stylesheet" href="bricktowerstyle.css" />
     <link rel="stylesheet" href="./fonts/fonts/fonts.css" />
-    <script src="bootstrap.bundle.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $(window).scroll(function(event) {
-          let scroll = $(this).scrollTop();
-          let opacity = 1 - scroll / 10000;
-          if (opacity >= 0) {
-            $(".navigation").css("opacity", opacity);
-          }
-        });
-      });
-    </script>
-    <script>
-    $('ul.navbar-nav li.dropdown').hover(function() {
-  $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeIn(500);
-}, function() {
-  $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeOut(500);
-});
-    </script>
-  
+
+  <script src="bricktower.js"></script>
+ 
   </head>
 
   <body>
