--- a/BlackTheme/blacktheme.html
+++ b/BlackTheme/blacktheme.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="myproject.css" />
+    <link rel="stylesheet" href="blacktheme.css" />
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -34,7 +34,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
- <script src="myproject.js"></script>
+ <script src="blacktheme.js"></script>
 
 
       
