renamed job board

--- a/JobBoard Theme/index.html
+++ b/JobBoard Theme/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="logo-text col-lg-8 col-md-7 col-12 pl-0 d-none d-md-block">
               <h3 class="logo-text-name dark-black font-weight-bold">
-                Innovator
+                Tamer Sali
               </h3>
               <h5 class="logo-text-job my-green font-weight-bold">
                 Job Board
@@ -213,7 +213,7 @@
     <div class="row">
       <div class="col">
         <p class="small-text">
-          &copy; Innovator Job Board | ALL Rights Reserved 2019
+          &copy; Tamer Sali Job Board | ALL Rights Reserved 2019
         </p>
       </div>
     </div>
