--- a/JobBoard Theme/job-description.html
+++ b/JobBoard Theme/job-description.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="logo-text col-lg-8 col-md-7 pl-0 d-none d-lg-block">
                             <h3 class="logo-text-name dark-black font-weight-bold">
-                                Innovator
+                                Tamer Sali
                             </h3>
                             <h5 class="logo-text-job font-weight-bold">Job Board</h5>
                         </div>
@@ -76,7 +76,7 @@
                         <div class="col-12 col-md-5 text-uppercase mb-3">
                             <h5 class="name-place my-green display-inline-block">
                                 <i class="fas fa-briefcase my-green secondary-header mr-1 align-middle"></i>
-                                Innovator
+                                Brain Stars
                             </h5>
                         </div>
                         <div class="my-green col-12 col-md-7 text-uppercase mb-3">
@@ -211,21 +211,21 @@
                             <h5 class="font-10-16 font-weight-bold mr-3 d-inline-block">
                                 Name:
                             </h5>
-                            <p class="d-inline-block">Innovator</p>
+                            <p class="d-inline-block">Brain Stars</p>
                         </div>
                         <div class="col-12">
                             <h5 class="font-10-16 font-weight-bold mr-3 d-inline-block">
                                 Address:
                             </h5>
                             <p class="d-inline-block">
-                                Sofia 1st St., Varna, Bulgaria 9000
+                                14 Alexander Malinov str, Varna, Bulgaria 9000
                             </p>
                         </div>
                         <div class="col-12 mb-2">
                             <h5 class="font-10-16 font-weight-bold mr-3 d-inline-block">
                                 Website:
                             </h5>
-                            <a href="https://innovator.bg/" class="my-green d-inline-block">https://innovator.bg/</a>
+                            <a href="http://brainstarstech.com/" class="my-green d-inline-block">http://brainstarstech.com/</a>
                         </div>
                         <div class="col-12">
                             <h5 class="font-10-16 font-weight-bold mr-3 d-inline-block">
@@ -233,10 +233,8 @@
                             </h5>
                         </div>
                         <div class="col-12">
-                            Innovator is the best place in Varna for peer-to-peer learning
-                            and knowledge sharing. We are part of the Global Maker Movement
-                            and aim to form a constructive, modern environment that will
-                            stimulate the entrepreneurial and creative thinking.
+                            We are a software development company that brings custom and platform-based solutions.
+							Our mission is to create a product from an idea, design or requirement.
                         </div>
                     </div>
                 </div>
@@ -282,7 +280,7 @@
         <div class="row">
             <div class="col">
                 <p class="small-text">
-                    &copy; Innovator Job Board | ALL Rights Reserved 2019
+                    &copy; Tamer Sali Job Board | ALL Rights Reserved 2019
                 </p>
             </div>
         </div>
