--- a/JobBoard Theme/profile.html
+++ b/JobBoard Theme/profile.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="logo-text col-lg-8 col-md-7 pl-0 d-none d-lg-block">
                             <h3 class="logo-text-name dark-black font-weight-bold">
-                                Innovator
+                                Tamer Sali
                             </h3>
                             <h5 class="logo-text-job font-weight-bold">Job Board</h5>
                         </div>
@@ -237,7 +237,7 @@
         <div class="row">
             <div class="col">
                 <p class="small-text">
-                    &copy; Innovator Job Board | ALL Rights Reserved 2019
+                    &copy; Tamer Sali Job Board | ALL Rights Reserved 2019
                 </p>
             </div>
         </div>
