--- a/JobBoard Theme/sign-in.html
+++ b/JobBoard Theme/sign-in.html
@@ -83,7 +83,7 @@
     <div class="row">
       <div class="col">
         <p class="small-text">
-          &copy; Innovator Job Board | ALL Rights Reserved 2019
+          &copy; Tamer Sali Job Board | ALL Rights Reserved 2019
         </p>
       </div>
     </div>
