--- a/DesignContest Theme/index.html
+++ b/DesignContest Theme/index.html
@@ -31,6 +31,18 @@
         </div>
       </div>
     </div>
+    <!-- navbar menu  -->
+    <div class="navigation">
+      <span class="image">
+        <img src="./resources/logo.png" alt="" />
+      </span>
+      <span>BROWSE CATEGORIES</span>
+      <span>HOW IT WORKS</span>
+      <span>BROWSE CONTEST</span>
+      <span>PRICING PLAN</span>
+      <span><i class="fas fa-key"></i>LOGIN</span>
+      <span><i class="fas fa-user"></i>REGISTER</span>
+    </div>
 
     <!-- image section -->
     <div class="head-image">
